# gemini-research-mcp

./: .gitignore  .gitmodules  .mcp.json  AGENTS.md  AUDIT_FACTCHECKED.md  BUG-local-file-context-cache.md  BUG-mcp-dict-list-serialization.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOVER.md  LICENSE  MLFLOW_TRACING.md  OPEN_ISSUES.md  README.md  ROADMAP.md  SECURITY.md  VIDEO-AGENT-MCP-TODO.md  package.json  pyproject.toml
.claude-plugin/: plugin.json
.github/: dependabot.yml  pull_request_template.md
agents/: comment-analyst.md  content-to-video.md  researcher.md  video-analyst.md  video-producer.md  visualizer.md
code-reviews/: test-strategy-2026-03-01.md
commands/: analyze.md  doctor.md  explain-status.md  explain-video.md  explainer.md  ingest.md  models.md  recall.md  research-doc.md  research.md  search.md  traces.md  video-chat.md  video.md
docs/: ARCHITECTURE.md  AUDIT.md  CODE_REVIEW_AUTOMATION.md  DATAFLOW.md  DIAGRAMS.md  MLFLOW_TRACING.md  PLUGIN_DISTRIBUTION.md  PUBLISHING.md  RELEASE_CHECKLIST.md  REVIEW.md  commit-audit-f700e21-8e7d973-b31b480.md  weaviate-agent-skills.md
scripts/: detect_review_scope.py
src/: AGENTS.md
tests/: AGENTS.md  conftest.py  test_cache.py  test_cache_bridge.py  test_client_validated.py  test_coerce_json_param.py  test_config.py  test_content_batch_tools.py  test_content_tools.py  test_context_cache.py  test_dotenv.py  test_infra_tools.py  test_knowledge_agent_tools.py  test_knowledge_filters.py  test_knowledge_summarize.py  test_knowledge_tools.py  test_models.py  test_new_store_functions.py  test_persistence.py  test_research_document_file.py  test_research_document_tools.py  test_research_tools.py  test_retry.py  test_schema_guard.py  test_search_tools.py  test_serialization.py  test_sessions.py  test_tracing.py  test_url_policy.py  test_validation.py  test_video_contract.py  test_video_core.py  (+11 more)
(+140 files in other folders)
